force-app/main/default/objects/Voucher_Catalog__c/Voucher_Catalog__c.object-meta.xml
<CustomObject>
    <label>Voucher Catalog</label>
    <nameField>
        <label>Voucher Catalog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voucher Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>