force-app/main/default/objects/Voucher_Catalog__c/fields/FromHeroku__c.field-meta.xml
<CustomField>
    <fullName>FromHeroku__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FromHeroku</label>
    <type>Checkbox</type>
</CustomField>