force-app/main/default/objects/Voucher_Catalog__c/fields/FromSalesforce__c.field-meta.xml
<CustomField>
    <fullName>FromSalesforce__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FromSalesforce</label>
    <type>Checkbox</type>
</CustomField>