force-app/main/default/objects/Voucher_Catalog__c/fields/Type_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Type_Voucher__c</fullName>
    <label>Type Voucher</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECLUB</fullName>
            </value>
            <value>
                <fullName>OPCO</fullName>
            </value>
            <value>
                <fullName>RI</fullName>
            </value>
            <value>
                <fullName>FREEL</fullName>
            </value>
            <value>
                <fullName>CLAIM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>