force-app/main/default/objects/Voucher_Catalog__c/fields/Validity_Day__c.field-meta.xml
<CustomField>
    <fullName>Validity_Day__c</fullName>
    <label>Validity Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>