force-app/main/default/objects/Voucher_Catalog__c/fields/VoucherId__c.field-meta.xml
<CustomField>
    <fullName>VoucherId__c</fullName>
    <label>VoucherId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>